--- a/customer.html
+++ b/customer.html
@@ -1,8 +1,6 @@
 <html>
-    <head>
-
-    </head>
-    <body>
-        heloo customer
-    </body>
+  <head> </head>
+  <body>
+    hello customer
+  </body>
 </html>
