--- a/manager.html
+++ b/manager.html
@@ -2,7 +2,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <head>
-        
+        <link rel="stylesheet" href="project-finance.css"/>
+  
         <style>
             .heading{
                 display :flex;
@@ -50,21 +51,9 @@
                 display: flex;
                 justify-content: flex-end;
             }
-            /* Dialog box css start */
+            /* Dialog box css end */
 
-            .optionsArea
-            {
-                display: flex;
-                justify-content: space-between;
-                padding: 10px;
-                width:80vw;
-            }
-            .dateSelect
-            {
-                display: flex;
-                justify-content: space-around;
-            }
-
+            
             /* Used for highlighting the selected row in table */
             .active
             {
