--- a/customer.html
+++ b/customer.html
@@ -795,19 +795,10 @@ td {
             let status = "";
         switch (data[i].loan_status) {
           case 0:
-            status = "Pending";
+            status = "Ongoing";
             break;
           case 1:
-            status = "Approved";
-            break;
-          case 2:
-            status = "Rejected";
-            break;
-          case 3:
-            status = "Cancelled";
-            break;
-          case 4:
-            status = "Topup Pending";
+            status = "Closed";
             break;
         }
 
