--- a/manager.html
+++ b/manager.html
@@ -720,20 +720,11 @@ td {
 
             let status = "";
         switch (data[i].loan_status) {
-          case 0:
-            status = "Pending";
+            case 0:
+            status = "Ongoing";
             break;
           case 1:
-            status = "Approved";
-            break;
-          case 2:
-            status = "Rejected";
-            break;
-          case 3:
-            status = "Cancelled";
-            break;
-          case 4:
-            status = "Topup Pending";
+            status = "Closed";
             break;
         }
         console.log("ok");
