--- a/ganesh-finance.html
+++ b/ganesh-finance.html
@@ -7,6 +7,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script src="loginRegister.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -73,42 +74,7 @@
           let uname = document.getElementById("username").value;
           let password = document.getElementById("password").value;
           if (uname.length != 0 && password.length != 0) {
-            let xmlhttp = new XMLHttpRequest();
-            let url = "http://localhost:8080/Authentication/login";
-            xmlhttp.open("POST", url);
-            let data = JSON.stringify(new userlogin(uname, password));
-            xmlhttp.setRequestHeader("content-type", "application/json");
-
-            xmlhttp.send(data);
-            xmlhttp.onload = function () {
-              let data = JSON.parse(xmlhttp.responseText);
-              console.log(data);
-              if (xmlhttp.status == "401") {
-                Swal.fire({
-                  icon: "error",
-                  title: `${data["error"]}`,
-                  button: "OK",
-                  timer: 3000,
-                });
-              }
-              if (xmlhttp.status == 200) {
-                let info = new storeData(
-                  data["username"],
-                  data["role"],
-                  data["role"],
-                  data["empcustid"],
-                  data["branchCode"]
-                );
-                localStorage.setItem("userDetails", JSON.stringify(info));
-                if (data["role"] == 0) {
-                  window.location.assign("manager.html");
-                } else if (data["role"] == 1) {
-                  window.location.assign("clerk.html");
-                } else if (data["role"] == 2) {
-                  window.location.assign("customer.html");
-                }
-              }
-            };
+            login(new userlogin(uname, password));
           }
         }
       }
@@ -122,6 +88,7 @@
         <span><a href="ganesh-finance.html">Home</a></span>
         <span><a href="emiCalc.html">EMI Calculator</a></span>
         <span><a href="ganesh-finance.html">Login</a></span>
+        <span><a href="register.html">Register</a></span>
       </div>
     </div>
     <div class="loginForm">
