changed Entry page to HOME page

--- a/ganesh-finance.html
+++ b/ganesh-finance.html
@@ -85,7 +85,7 @@
     <div class="heading">
       <span class="title">Ganesh Finance</span>
       <div class="options">
-        <span><a href="ganesh-finance.html">Home</a></span>
+        <span><a href="home.html">Home</a></span>
         <span><a href="emiCalc.html">EMI Calculator</a></span>
         <span><a href="ganesh-finance.html">Login</a></span>
         <span><a href="register.html">Register</a></span>
