--- a/customer.html
+++ b/customer.html
@@ -97,9 +97,9 @@
       #pdf-container
             {
                 display: none;
-                position: absolute;
+                position: fixed;
                 margin: auto;
-                top: 50px;
+                top: 5vh;
                 left:200px;
                 z-index: 10;
                 height: 500px;
@@ -909,7 +909,7 @@ td {
               function calculateEMI(){
                 let tenure = document.getElementById("inputLoanTenure").value;
                 let roi = document.getElementById("inputRoi").value;
-                let rate = roi/100
+                let rate = roi/12/100
                 let requested_amount = document.getElementById("inputRequestedAmount").value;
                 
                 if(!(tenure === "" || roi === "" || requested_amount === "")){
