Implemented document part in manager.html

--- a/customer.html
+++ b/customer.html
@@ -909,7 +909,7 @@ td {
               function calculateEMI(){
                 let tenure = document.getElementById("inputLoanTenure").value;
                 let roi = document.getElementById("inputRoi").value;
-                let rate = roi/12/100
+                let rate = roi/12/100;
                 let requested_amount = document.getElementById("inputRequestedAmount").value;
                 
                 if(!(tenure === "" || roi === "" || requested_amount === "")){
