Made some change to ui

--- a/register.html
+++ b/register.html
@@ -218,6 +218,7 @@
       </div>
     </div>
     <div id="applyLoanTable">
+      
       <table id="registerForm">
         <tbody>
           <tr>
@@ -327,7 +328,7 @@
                 id="login"
                 onclick="validateDetails()"
               >
-                Login
+                Sign up
               </button>
             </td>
           </tr>
