--- a/emiCalc.html
+++ b/emiCalc.html
@@ -15,7 +15,8 @@
         background: #ffffff;
         padding: 20px 25px;
         border-radius: 10px;
-        box-shadow: 0 0 60px rgba(1, 0, 5, 0.15);
+        /* box-shadow: 0 0 60px rgba(1, 0, 5, 0.15); */
+      
       }
 
       .main h2 {
@@ -30,6 +31,7 @@
         flex-wrap: wrap;
         justify-content: space-around;
         padding: 10px 0px;
+        
       }
 
       .calculator .calculator-input {
@@ -84,7 +86,7 @@
       }
       .main .calculator-result ul {
         width: 100%;
-        background: #ff6f43;
+        background: orange;
         padding: 10px 15px;
         border-radius: 5px;
       }
@@ -186,7 +188,7 @@
       let xValues = ["Principle", "Interest"];
       let yValues = [amount, Math.floor(interest)];
 
-      let barColors = ["#f4511e", "#000000"];
+      let barColors = ["orange", "#000000"];
 
       new Chart("loanChart", {
         type: "pie",
